#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-54
2015-10-14 Mikhail S. Dubrovin
- Fix crash if detector source is missing in data (PSAS-139)
   - CalibParsStore.py - method Create now returns object even if the detector source is missing.
   - GenericCalibPars.py - sets self.cbase = None if detector source is missing. Returns None for missing constants.	

Tag: V00-02-53
2015-10-14 Mikhail S. Dubrovin
- Add support for Rayonix (PSAS-139)

Tag: V00-02-52
2015-10-06 Mikhail S. Dubrovin
- Add support for Quartz4A150 (PSAS-139)
  GlobalUtils.py - add Quartz4A150 detector
  CalibParsStore.py - add QUARTZ4A150 as CalibParsBaseCameraV1()
	
Tag: V00-02-51
2015-09-18 Mikhail S. Dubrovin
- add CalibParsBaseImpV1.py, add Imp in GlobalUtils.py and CalibParsStore.py (PSAS-139)

Tag: V00-02-50
2015-09-11 Mikhail S. Dubrovin
- GeometryAccess.py - define self.valid before self.load_pars_from_file().
	
Tag: V00-02-49
2015-09-09 Mikhail S. Dubrovin
- GenericCalibPars.py - fix logic of ndim, shape, size and other misc. changes.
- CalibFileFinder.py - add protection in case of non-recognized calib file name.
- CalibParsBasePnccdV1.py - for pnccd use fixed size array parameters; segs = 4, rows=cols=512.
- CalibPars.py - update self-doc.
- CalibParsStore.py  - use gu.det_type_from_source
- GeometryAccess.py - add protection if calibration file is missing.
- GlobalUtils.py - fix det_type_from_source, add string_from_source, merge_masks, reshape_nda_to_2(3)d

Tag: V00-02-48
2015-08-27 Mikhail S. Dubrovin
- minor corrections of auto-doc.
- add src/CalibPars*.py, src/GenericCalibPars.py, src/GlobalUtils.py